kyverno-manifests/kyverno-cluster-wide-policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-team
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Label 'Name' is required to deploy the Pod"
        pattern:
          metadata:
            labels:
              Name: "?*"
